syntax = "proto3";

import "data.proto";
import "job.proto";
import "status.proto";

message ConnectionRequest {
    int32 user_id = 1;
    enum Status {
        HEARTBEAT = 1;
        CLOSE_CONNECTION = 2;
    }
    Status status = 2;
}

message SingleRequest {
    oneof request {
        ConnectionRequest connection_request = 1;
        JobSubmission job_submission = 2;
        DataRetrievalRequest data_retrieval_request = 3;
        JobStatusRequest job_status_request = 4;
    }
}